--- a/env.template
+++ b/env.template
@@ -9,6 +9,7 @@ NEXT_PUBLIC_FIREBASE_storageBucket=
 NEXT_PUBLIC_FIREBASE_messagingSenderId=
 NEXT_PUBLIC_FIREBASE_appId=
 NEXT_PUBLIC_FIREBASE_measurementId=
+NEXT_PUBLIC_GETSTREAM_APP_ID=
 NEXT_PUBLIC_GETSTREAM_API_KEY=
 NEXT_PUBLIC_GETSTREAM_API_SECRECT_KEY=
 NEXT_PUBLIC_GETSTREAM_OWNER_ID=
