--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "framer-motion": "^6.3.11",
     "next": "12.1.6",
     "react": "18.1.0",
+    "react-activity-feed": "^1.4.0",
     "react-dom": "18.1.0",
     "react-firebase-hooks": "^5.0.3",
     "react-toastify": "^9.0.4",
