--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ethers": "^5.6.8",
     "firebase": "^9.8.3",
     "framer-motion": "^6.3.11",
+    "getstream": "^8.0.1",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-activity-feed": "^1.4.0",
